--- a/front/src/style.css
+++ b/front/src/style.css
@@ -31,7 +31,7 @@ body {
 }
 
 .formulario {
-  background: linear-gradient(145deg, #000000 0%, #2a0000 50%, #550000 100%);
+  background: linear-gradient(145deg, #ffa500 0%, #ffff00 100%);
   height: 70vh;
   width: 30rem;
   display: grid;
