--- a/front/src/style.css
+++ b/front/src/style.css
@@ -9,7 +9,7 @@ html {
 body {
   height: 100vh;
   width: 100%;
-  background: linear-gradient(145deg, #ffa500 0%, #ffff00 100%);
+  background-color: #525e75;
   display: flex;
   flex-direction: column;
   justify-content: space-evenly;
@@ -22,16 +22,18 @@ body {
   justify-self: center;
   justify-content: center;
   align-items: center;
+  background-color: #323b4d;
+  border-radius: 60px;
 }
 
 .bienvenido h1 {
-  color: #ffd60a;
+  color: #c5c2a5;
   font-size: 8vh;
   animation: bienvenida 5s ease-in-out infinite alternate-reverse;
 }
 
 .formulario {
-  background: linear-gradient(145deg, #000000 0%, #2a0000 50%, #550000 100%);
+  background-color: #c5c2a5;
   height: 70vh;
   width: 30rem;
   display: grid;
@@ -49,7 +51,7 @@ body {
 }
 
 .nombre {
-  color: #600000;
+  background-color: #e8f1ff;
   height: 3rem;
   width: 10rem;
   grid-area: nombre;
@@ -64,6 +66,7 @@ body {
 }
 
 .email {
+  background-color: #e8f1ff;
   font-size: 1.2rem;
   height: 3rem;
   width: 10rem;
@@ -78,6 +81,7 @@ body {
 }
 
 .mensaje {
+  background-color: #e8f1ff;
   font-size: 1.2rem;
   height: auto;
   width: auto;
@@ -90,6 +94,7 @@ body {
 }
 
 .boton {
+  background-color: #e8f1ff;
   grid-area: boton;
   color: rgb(87, 90, 102);
   height: 3rem;
