--- a/front/src/style.css
+++ b/front/src/style.css
@@ -127,11 +127,15 @@ body {
     overflow: hidden !important;
   }
 
+  .bienvenido {
+    background-color: #525e75;
+  }
+
   .bienvenido h1 {
     margin: 0rem;
-    width: 90vw;
+    width: 100vw;
     height: 10vh;
-    font-size: 2.5rem;
+    font-size: 3rem;
     display: flex;
     justify-content: center;
     align-items: center;
